I try to use context but I think is more easy to use usereduce for the count and I improve from then

--- a/styles/global.css
+++ b/styles/global.css
@@ -33,6 +33,7 @@ body {
   margin: 1.5rem auto;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 .card-container p {
   font-size: 2.2rem;
