--- a/styles/global.css
+++ b/styles/global.css
@@ -1,8 +1,9 @@
 :root {
   --black: #190f07;
-  --laze-lemon: #ffff00;
+  --white: #ffffff;
   --electric-lime: #05f804;
-  --red: #ff2163;
+  --red: #c91313;
+  --gray:#092c41;
 }
 
 html {
@@ -19,28 +20,35 @@ body {
   color: white;
   font-size: 1.6rem;
 }
-.container h1{
+h1{
   width: 80vw;
   margin: 2.5rem auto;
 }
-.card-container {
-  background-color: var(--laze-lemon);
+.container {
   width: 80vw;
-  color: var(--black);
-  height: 5rem;
+  margin: 0 auto;
+  display: grid;
+  grid-auto-rows: 6rem;
+  grid-template-columns: repeat(auto-fill, minmax(34rem, 1fr));
+  gap: 2rem;
+  margin-bottom: 6rem;
+}
+.card-container {
+  background-color: var(--gray);
+  color: var(--white);
   border-radius: 0.8rem;
-  padding: 0 1.5rem;
-  margin: 1.5rem auto;
+  height: 6.8rem;
+  padding: 0 1.8rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin: 1.5rem 0;
 }
 .card-container p {
   font-size: 2.2rem;
-  letter-spacing: 0.2rem;
   font-weight: 700;
 }
-.right-content{
+.right-content {
   align-items: center;
   display: flex;
 }
@@ -48,54 +56,20 @@ body {
   font-size: 4rem;
   margin-right: 1.5rem;
 }
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 5rem;
-  height: 2.4rem;
-}
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-.slider {
-  position: absolute;
+.button{
+  border: none;
+  width: 8rem;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  margin-left: 1rem;
+  font-weight: 600;
+  font-size: 1.5rem;
+  height: 3.8rem;
   cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: var(--black);
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
 }
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 1.8rem;
-  width: 1.8rem;
-  left: 0.4rem;
-  bottom: 0.3rem;
+.Iniciar{
   background-color: var(--electric-lime);
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
 }
-input:checked + .slider {
-  background-color: var(--black);
-}
-
-input:checked + .slider:before {
-  -webkit-transform: translateX(2.4rem);
-  -ms-transform: translateX(2.4rem);
-  transform: translateX(2.4rem);
-}
-input:checked + .slider:before {
+.Terminar{
   background-color: var(--red);
-}
-.slider.round {
-  border-radius: 1.4rem;
-}
-.slider.round:before {
-  border-radius: 50%;
 }
